--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
 body{
-    background-color: #85c4db;
+    background-color:rgb(47, 234, 44);
 }
+
+table{
+    width:100%;
+    text-align: center;
+    border-collapse: collapse;
+ } 
+
+ td,th{
+     border:2px solid crimson;
+     padding: 10px;
+ }
+
+ tr{
+     background-color: #414141;
+ }
+
+ tr:nth-child(even){
+     background-color: white;
+ }
